deployments/pathweb/workloads/home-network/n8n/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: home-network
spec:
  selector:
    app.kubernetes.io/name: n8n
  clusterIP: None
  ports:
  - port: 5678
    targetPort: 5678
    name: http
    protocol: TCP
    appProtocol: http
