deployments/pathweb/workloads/home-network/n8n/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: home-network
  labels:
    app.kubernetes.io/name: n8n
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - n8n.services.home.yrf.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: n8n-main
      port: 5678
