deployments/pathweb/workloads/home-network/n8n/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n-policy
  namespace: home-network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: '5678'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: '5678'
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: home-assistant
    toPorts:
    - ports:
      - port: '5678'
        protocol: TCP
  egress:
  - toFQDNs:
    - matchName: "forgejo.services.home.yrf.me"
    toPorts:
    - ports:
      - port: '222'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: haproxy
        app.kubernetes.io/instance: redis-ha-proxy
    toPorts:
    - ports:
      - port: '6379'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: postgres
        app.kubernetes.io/part-of: rfhome-postgres-ha
    - matchLabels:
        app.kubernetes.io/component: database
        app.kubernetes.io/name: pgbouncer
        app.kubernetes.io/part-of: rfhome-postgres-ha
    toPorts:
    - ports:
      - port: '5432'
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
  - toEntities:
    - ingress
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: home-assistant
    toPorts:
    - ports:
      - port: '8123'
        protocol: TCP
  - toEntities:
    - world
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: media-services
        app.kubernetes.io/name: flaresolverr
    toPorts:
    - ports:
      - port: "8191"
